# ai-hub

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  exemple.env  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
src/ai-hub/navigation/: routes.py
src/ai-hub/navigation/classificators/: about_classificators.py  gender.py
src/ai-hub/navigation/classificators/data/: names.py
src/ai-hub/navigation/classificators/utils/: classify_gender.py
src/ai-hub/navigation/crew_ai/: blog_builder.py
src/ai-hub/navigation/crew_ai/utils/: consulting_external_api.py
src/ai-hub/navigation/guardrails/: about_guardrails.py  toxicity.py
src/ai-hub/navigation/hostel_helper/: about_hostel_helper.py  langchain.py  langgraph.py  llamaindex_chat.py
src/ai-hub/navigation/hostel_helper/utils/: llamaindex.py
src/ai-hub/navigation/main/: home.py
src/ai-hub/navigation/movie_recommender/: about_movie_recommender.py  association_rules.py  collaborative_filtering.py  content_based.py  popularity.py
src/ai-hub/navigation/movie_recommender/components/: movie_selector.py
src/ai-hub/navigation/named_entity_recognition/: about_ner.py  text_extractor.py
src/ai-hub/navigation/named_entity_recognition/models/: ner-crf.model
src/ai_hub/: streamlit_app.py
src/ai_hub/navigation/: routes.py
src/ai_hub/navigation/crew_ai/: about_crew_ai.py  movie_mate.py
src/ai_hub/navigation/hostel_helper/: langchain.py  langgraph.py  llamaindex_graph.py
src/ai_hub/navigation/main/: home.py
(+4 files in other folders)
