[project]
name = "ai-hub"
version = "0.1.0"
description = ""
authors = [
    {name = "LeoVilelaRibeiro",email = "leonardo.leovilela@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "streamlit-chat (>=0.1.1,<0.2.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "openai (>=1.72.0,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "crewai (>=0.114.0,<0.115.0)",
    "crewai-tools (>=0.40.1,<0.41.0)",
    "setuptools (>=78.1.0,<79.0.0)",
    "langgraph (>=0.3.30,<0.4.0)",
    "llama-index (>=0.12.33,<0.13.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
